Fixed img-white space
Fixed an issue where in mozilla browsers the image grid would displace
a white space below each image.

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ blockquote{
 
 .works>li>a>img{
 	max-width: 100%;
+	vertical-align: bottom;
 }
 
 .projects{
